# python-apps

./: .gitignore  Makefile  README.md  conftest.py
.github/workflows/: ci.yml
apps/dolores-assistant/: Dockerfile  pyproject.toml
apps/dolores-assistant/src/dolores_assistant/: __init__.py  __main__.py  config.py  main.py  pipeline.py  routes.py  schemas.py
apps/dolores-assistant/src/dolores_assistant/tools/: __init__.py  base.py  registry.py
apps/dolores-brain/: Dockerfile  pyproject.toml
apps/dolores-brain/src/dolores_brain/: __init__.py  __main__.py  config.py  conversation.py  main.py  provider_config.py  routes.py  schemas.py
apps/dolores-cli/: pyproject.toml
apps/dolores-cli/src/dolores_cli/: __init__.py  __main__.py  chat.py  client.py  config.py
apps/dolores-stt/: Dockerfile  Dockerfile.gpu  pyproject.toml
apps/dolores-stt/src/dolores_stt/: __init__.py  __main__.py  config.py  engine.py  main.py  routes.py  schemas.py
apps/dolores-tts/: Dockerfile  Dockerfile.gpu  pyproject.toml
apps/dolores-tts/src/dolores_tts/: __init__.py  __main__.py  config.py  engine.py  main.py  routes.py  schemas.py  voice_profiles.py
apps/dolores-tts/src/dolores_tts/engines/: __init__.py  coqui_xtts.py  piper.py
apps/portfolio/: Dockerfile  README.md  nginx.conf  pyproject.toml
apps/portfolio/src/: index.html  script.js  styles.css
apps/todo/: Dockerfile  README.md  pyproject.toml  run.py
apps/todo/src/todo_app/: __init__.py  __main__.py  api.py  auth.py  config.py  db_store.py  jwt_auth.py  models.py  storage.py  web.py  wsgi.py
apps/todo/src/todo_app/static/: styles.css
apps/todo/src/todo_app/templates/: base.html  index.html  note_form.html  todo_form.html  work_form.html
apps/todo/tests/: test_app.py  test_web.py  test_work.py
libs/dolores-common/: pyproject.toml
libs/dolores-common/src/dolores_common/: __init__.py  auth.py  config.py  errors.py  health.py  logging.py  middleware.py  models.py
scripts/: dev.sh  setup-dolores.sh  test-dolores-services.sh
