[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dolores-tts"
version = "0.1.0"
description = "Dolores Text-to-Speech service (Coqui XTTS v2)"
authors = [{ name = "Achaves" }]
requires-python = ">=3.10"
dependencies = [
    "dolores-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
gpu = [
    "coqui-tts==0.24.1",
    "transformers==4.40.2",
    "torch==2.10.0",
    "torchaudio==2.10.0",
]

[project.scripts]
"dolores-tts" = "dolores_tts.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dolores_tts*"]
