[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "0.1.0"
description = "Simple Flask ToDo/Notes app"
readme = "README.md"
authors = [{ name = "Achaves" }]
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4.0",
  "python-dotenv>=1.0,<2.0",
  "Authlib>=1.3,<2.0",
  "requests>=2.31,<3.0",
]

[project.scripts]
# Console command: `todo-app`
"todo-app" = "todo_app.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["todo_app*"]
